[package]
name = "larix-lending"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.5.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.8.0"
#spl-token = { path = "../token/program", features = [ "no-entrypoint" ] }
spl-token = {version="3.2.0",features = [ "no-entrypoint" ]}
thiserror = "1.0"
uint = "0.8"
anchor-lang = "0.18.2"
borsh = "0.9"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "0.10"
solana-program-test = "1.6.7"
solana-sdk = "1.6.7"
serde = "1.0"
serde_yaml = "0.8"

[lib]
crate-type = ["cdylib", "lib"]
